PR 01 — Canonical Trace Semantics and Executable Fixtures